examples/negative/effects/resume_escape_as_value.kai
effect Pick { pick() : Int }

# `resume` may only be called (`resume(v)`), never used as a first-class
# value: binding it to a `let` lets the continuation escape its clause,
# which has no value representation (docs/effects.md). The typer rejects it.
fn main() : Int / Stdout = {
  let r = handle { let x = Pick.pick(); x + 1 }
          with Pick { pick(resume) -> { let k = resume; k(10) } return(x) -> x }
  Stdout.print("r=#{r}\n"); 0
}
